# HLA-Splitter

./: LICENSE  README.md  pyproject.toml
hla_splitter/: __init__.py  analysis.py  cli.py  steps.py  utils.py
tests/: test.sh
tests/test data/: HLA-genotypes.csv  HLA_demultiplex.csv  sorted_genotypes.txt
tests/test data/sc_output/filter_counts/: output.barcodes.txt
